--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:design:${libs.supportVersion}"
     implementation "com.android.support:appcompat-v7:${libs.supportVersion}"
     implementation "com.android.support:recyclerview-v7:${libs.supportVersion}"
     implementation 'com.jakewharton:butterknife:8.8.1'//View注入框架
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'//View注入框架
     //处理Android 6.0系统中的运行时权限
     //Requesting runtime permissions on Android 6.0 or higher. Sharing private files on Android 7.0 or higher.
