--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,14 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'//View注入框架
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+//    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'//View注入框架
     //处理Android 6.0系统中的运行时权限
     //Requesting runtime permissions on Android 6.0 or higher. Sharing private files on Android 7.0 or higher.
     //Installing unknown source apk on Android 8.0 or higher.android.permission.REQUEST_INSTALL_PACKAGES
     //Drawing at the top of other apps on Android 6.0 or higher.android.permission.SYSTEM_ALERT_WINDOW.
     implementation 'com.yanzhenjie:permission:2.0.0-rc12'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
