--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,17 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -26,7 +32,6 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'//View注入框架
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-//    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'//View注入框架
     //处理Android 6.0系统中的运行时权限
     //Requesting runtime permissions on Android 6.0 or higher. Sharing private files on Android 7.0 or higher.
@@ -34,6 +39,7 @@ dependencies {
     //Drawing at the top of other apps on Android 6.0 or higher.android.permission.SYSTEM_ALERT_WINDOW.
     implementation 'com.yanzhenjie:permission:2.0.0-rc12'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
