--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,18 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
+            android:name=".MyApplication"
             android:allowBackup="true"
-            android:name="com.dragon.myreadhub.MyApplication"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".activity.AboutActivity">
+        </activity>
         <activity android:name=".activity.NotificationActivity">
         </activity>
-
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,9 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".activity.MainActivity">
-
         </activity>
     </application>
 
