--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           package="com.dragon.myreadhub">
-
     <!-- 加入应用需要的权限 -->
     <!-- 网络相关 -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-
-    <!-- 手机状态 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/> <!-- 手机状态 -->
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
-
-    <!-- 读写文件 -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/> <!-- 读写文件 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
 
     <application
             android:name=".MyApplication"
@@ -27,6 +21,8 @@
             android:supportsRtl="true"
             android:theme="@style/MyReadHub"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activity.RxJavaTestActivity">
+        </activity>
         <activity android:name=".activity.AboutActivity">
         </activity>
         <activity android:name=".activity.NotificationActivity">
